--- a/source/_data/next.yml
+++ b/source/_data/next.yml
@@ -17,7 +17,7 @@ timezone: Asia/Shanghai
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
-url: http://www.namunana.cn:80
+url: http://blog.namunana.cn:80
 root: /
 permalink: posts/:url.html
 permalink_defaults:
